CORE-876 - Fixed initialization error notification from being displayed behind the loading indicator

--- a/runtime/css/loading.less
+++ b/runtime/css/loading.less
@@ -21,6 +21,7 @@ permissions and limitations under the License.
         margin-left: 5%;
         width: 90%;
         z-index: 1;
+        z-index: 1200;
     }
 
     .wait-container {
